Remove compose-compiler plugin alias - Compose is configured via buildFeatures"

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,4 +29,4 @@ coil-compose = { group = "io.coil-kt", name = "coil-compose", version = "2.4.0" 
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
